fix scrollbar

--- a/files/settings/css/heartless.css
+++ b/files/settings/css/heartless.css
@@ -438,6 +438,22 @@ padding-top: 12px;
   border-radius: 10px;
 }
 
+::-webkit-scrollbar {
+    width: 0.5rem;
+    border-radius: 0.4rem;
+    background-color: #252525;
+    transition: all 0.5s ease;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #fff;
+    border-radius: 0.4rem;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #b50000;
+  }
+
 @media only screen and (min-width:992px){
     nav {
         margin-bottom: 1%;
